@@ -1,5 +1,14 @@
 2011-02-13  Konstantinos Poulios  <logari81@googlemail.com>
 
+	* graphics.h.in (axes::properties::update_boundingbox,
+	axes::properties::update_dataaspectratio,
+	axes::properties::update_dataaspectratiomode,
+	axes::properties::update_plotboxaspectratio,
+	axes::properties::update_plotboxaspectratiomode):
+	Replace update_transform hooks with sync_positions. 
+
+2011-02-13  Konstantinos Poulios  <logari81@googlemail.com>
+
 	* graphics.h.in (axes::properties::get_extent,
 	axes::properties::calc_tightbox): New functions prototypes.
 	(axes::properties::update_view): Hook sync_positions.
